# shenv

./: README.md  setup.cfg
src/shenv/: __init__.py
src/shenv/share/bash-completion/completions/: shenv
