[metadata]
name = shenv

[global]
verbose = 0

[egg_info]
egg_base = /tmp

[options]
install_requires =
    furl
    typer[all]
package_dir =
    =src
packages = find:
python_requires = >=3.8
scripts =
    bin/*

[options.data_files]
bin =
    lib/*
etc =
    etc/*
share =
    share/*

[options.entry_points]
console_scripts =
    shenv = shenv:app

[options.extras_require]
test =
    build
    coverage
    darling
    icecream
    ipython
    myst-parser
    pip-tools
    pytest
    pytest-asyncio
    sphinx
    sphinx-click
    sphinx-rtd-theme
    sphinxcontrib-napoleon
    tox
    watchdog
    wheel
[options.packages.find]
where = src
